<resources>
    <string name="app_name">至典智能</string>
    <string name="room_lights">room_lights</string>
    <string name="zone">区域</string>
    <string name="updating_project_info">更新项目信息...</string>
    <string name="updating_room_info">更新中 %s...</string>
    <string name="room">房间</string>
    <string name="rooms">房间</string>
    <string name="updating_lighting_scenes">更新灯光场景...</string>
    <string name="updating_custom_buttons">更新定制按键...</string>
    <string name="loading_new_project">载入新专案...</string>
    <string name="thermostat_mode_format_off">模式：关闭</string>
    <string name="thermostat_mode_format_auto">模式：</string>
    <string name="thermostat_mode_format">模式：</string>
    <string name="thermostat_cool">制冷</string>
    <string name="thermostat_heat">制热</string>
    <string name="thermostat_auto">自动</string>
    <string name="thermostat_off">关闭</string>
    <string name="tracks">曲目</string>
    <string name="my_music">我的音乐</string>
    <string name="albums">专辑</string>
    <string name="artists">歌手</string>
    <string name="playlists">播放列表</string>
    <string name="genres">类型</string>
    <string name="all_songs">所有歌曲</string>
    <string name="movies">影片</string>
    <string name="directors">系统</string>
    <string name="actors">演员</string>
    <string name="ratings">评级</string>
    <string name="channels">频道</string>
    <string name="stations">电台</string>
    <string name="ip_cameras">网络摄像机</string>
    <string name="app_expired">这个应用程序已经过期，请下载最新的版本或联系support@control4.com。</string>
    <string name="motors_sensors">马达／传感器</string>
    <string name="blinds">窗帘</string>
    <string name="zones">区域</string>
    <string name="now_playing">正在播放</string>
    <string name="wakeups">晨唤</string>
    <string name="new_releases">新发布</string>
    <string name="staff_picks">员工推荐</string>
    <string name="just_added">最新加入</string>
    <string name="top_tracks">热门曲目</string>
    <string name="top_albums">热门专辑</string>
    <string name="top_artists">热门歌手</string>
    <string name="exclusive_albums">独家专辑</string>
    <string name="top_playlists">热门播放列表</string>
    <string name="featured_playlists">类型播放列表</string>
    <string name="dynamic_playlists">动态播放列表</string>
    <string name="recent_playlists">近期播放列表</string>
    <string name="top_channels">热门频道</string>
    <string name="all_channels">所有频道</string>
    <string name="recommends">推荐</string>
    <string name="permanent">锁定</string>
    <string name="two_hours">两小时</string>
    <string name="to_next">到下一个</string>
    <string name="until_next">直到下一个</string>
    <string name="on">开</string>
    <string name="auto">自动</string>
    <string name="off">关闭</string>
    <string name="low">低</string>
    <string name="medium">中</string>
    <string name="high">高</string>
    <string name="time_am">上午</string>
    <string name="time_pm">下午</string>
    <string name="empty_list">找不到结果...</string>
    <string name="watch">观赏</string>
    <string name="listen">音乐</string>
    <string name="security">安防</string>
    <string name="lighting">灯光</string>
    <string name="lights">灯</string>
    <string name="comfort">环境</string>
    <string name="more">更多</string>
    <string name="volume">音量</string>
    <string name="update_details">按下方的 \"更新\" 键取得系统中所有家庭自动化设备。</string>
    <string name="update_button">更新</string>
    <string name="updating">更新中...</string>
    <string name="connect">连接</string>
    <string name="connect_to_director">连接至系统</string>
    <string name="refresh">刷新</string>
    <string name="remove">删除</string>
    <string name="add">增加</string>
    <string name="connect_details">连接信息</string>
    <string name="connect_text_label">请输入IP地址与Control4® 系统名称并按下 \"连接\" 键。</string>
    <string name="ip_address_label">IP 地址：</string>
    <string name="name_label">名称：</string>
    <string name="ip_address_hint">请输入IP地址</string>
    <string name="name_hint">请输入用户名</string>
    <string name="connect_button">连接</string>
    <string name="config_completed">设定完成。</string>
    <string name="config_completed_description">您的系统已准备好使用。</string>
    <string name="done">完成</string>
    <string name="choose_a_room">选择房间：</string>
    <string name="choose_a_floor">选择楼层：</string>
    <string name="choose_a_site">选择位置：</string>
    <string name="choose_a_building">选择大楼：</string>
    <string name="update_project">更新项目</string>
    <string name="update_project_description">想从您的家庭自动化系统中得到更新信息吗？</string>
    <string name="update_project_positive">确定</string>
    <string name="update_project_negative">取消</string>
    <string name="unable_to_update_project_device_not_authenticated">无法更新您的项目。您的设备没有取得授权与此系统连接使用。</string>
    <string name="unable_to_update_project">无法更新项目。</string>
    <string name="ok">确定</string>
    <string name="fan">风扇</string>
    <string name="hold">保持</string>
    <string name="thermostat_fan_auto">风量自动</string>
    <string name="thermostat_fan_on">风量启动</string>
    <string name="thermostat_fan_title">选择风量</string>
    <string name="thermostat_hold_permanent">保持锁定</string>
    <string name="thermostat_hold_twohours">保持两小时</string>
    <string name="thermostat_hold_until">保持直到</string>
    <string name="thermostat_hold_off">保持解除</string>
    <string name="thermostat_hold_title">选择保持模式</string>
    <string name="reconnect_title">重新联机</string>
    <string name="reconnect_message">尝试着重新联机到您的家庭自动化系统。按返回键取消。</string>
    <string name="reconnect_negative">取消</string>
    <string name="failed_reconnect_message">无法联机到您的家庭自动化系统。请按下方的 \"连接\" 键与您的系统联机。</string>
    <string name="failed_reconnect_positive">连接</string>
    <string name="rhapsody_failed_reconnect_title">重新联机到 Rhapsody</string>
    <string name="rhapsody_failed_reconnect_message">无法连接到 Rhapsody. 请按下面的 \"连接\" 键重新连接。</string>
    <string name="rhapsody_failed_reconnect_positive">连接</string>
    <string name="device_id">设备 ID:</string>
    <string name="navigator_version">导航界面版本：</string>
    <string name="director_version">系统版本：</string>
    <string name="media_version">媒体版本：</string>
    <string name="director">系统：</string>
    <string name="number_of_songs">%1$d 首歌</string>
    <string name="one_song">一首歌</string>
    <string name="play_now">现正播放</string>
    <string name="add_to_queue">增加到现正播放</string>
    <string name="cancel">取消</string>
    <string name="av_recall">前一台</string>
    <string name="av_info">信息</string>
    <string name="av_guide">指南</string>
    <string name="av_input">输入</string>
    <string name="av_menu">菜单</string>
    <string name="av_pvr">预录</string>
    <string name="av_cancel">取消</string>
    <string name="av_prev">上一台</string>
    <string name="av_channel">频道</string>
    <string name="av_page">页</string>
    <string name="av_enter">输入</string>
    <string name="av_tv_video">电视／视频</string>
    <string name="av_eject">出仓</string>
    <string name="av_cc">关闭字幕</string>
    <string name="av_dvr">录像</string>
    <string name="av_aspect">比例</string>
    <string name="demo_mode">展示模式：</string>
    <string name="tv_info">信息</string>
    <string name="tv_input">输入</string>
    <string name="tv_aspect">比例</string>
    <string name="_add_to_queue">   增加到现正播放列表</string>
    <string name="_play_now">   直接播放</string>
    <string name="play">播放</string>
    <string name="queue">现正播放列表</string>
    <string name="of">从</string>
    <string name="track">曲目</string>
    <string name="next">下一个</string>
    <string name="_play_movie">   播放电影</string>
    <string name="cast">演员名单：</string>
    <string name="actor">演员：</string>
    <string name="unknown_rating">（没有评级）</string>
    <string name="minutes">分钟</string>
    <string name="empty">（空白）</string>
    <string name="demo">展示</string>
    <string name="zones_add_zone">＋增加房间...</string>
    <string name="select_zones">选择房间</string>
    <string name="all_zones">所有房间</string>
    <string name="browse">浏览：</string>
    <string name="search">搜寻</string>
    <string name="channel_guide">频道导览</string>
    <string name="my_rhapsody">我的Rhapsody</string>
    <string name="my_account">我的账户</string>
    <string name="music_guide">音乐导览</string>
    <string name="playlist_central">播放列表中心</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="rhapsody_login">Rhapsody 登录</string>
    <string name="logout">注销</string>
    <string name="reconnect">重新联机</string>
    <string name="login_text_label">请输入您的用户名及密码：</string>
    <string name="rhapsody_login_successful">登录到 Rhapsody</string>
    <string name="account_info">帐户信息：</string>
    <string name="customer_support">客服：</string>
    <string name="membership_plan">会员：</string>
    <string name="account_type">账户类型：</string>
    <string name="queue_clear">清除</string>
    <string name="queue_save">储存</string>
    <string name="save_playlist_title">保存播放列表</string>
    <string name="save_playlist_text">请输入您想建立的播放列表名称，并按储存键。</string>
    <string name="save_playlist_label">播放列表：</string>
    <string name="save_playlist_prompt">输入播放列表名称</string>
    <string name="save_playlist_button">储存</string>
    <string name="clear_queue_title">清空现正播放列表</string>
    <string name="clear_queue_prompt">您确定要清除现正播放列表？</string>
    <string name="app_disabled_title">无法执行应用程序</string>
    <string name="app_disabled_message">此应用程序无法使用。程序已过期或损坏。请确定执行最新的Android Marketplace。</string>
    <string name="room_off_confirmation_title">关闭房间</string>
    <string name="room_off_confirmation_message">您确定要关闭这房间？</string>
    <string name="zone_off_confirmation_title">关闭区域</string>
    <string name="zone_off_confirmation_message">您确定要关闭这区域？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="art">Art</string>
    <string name="offline">脱机</string>
    <string name="license_check_required">无法确认您的应用程序授权。请确定您的设备已连上因特网并重试。</string>
    <string name="media_widget_disconnected">点选联机到系统</string>
    <string name="welcome_msg">欢迎到 我的E家</string>
    <string name="welcome_test_title">测试功能</string>
    <string name="welcome_test_msg">试试展示功能，看可以控制哪些东西。</string>
    <string name="welcome_like_title">喜欢这应用程序吗？</string>
    <string name="welcome_like_msg">请告诉朋友，并在 Android™ Market 中替我们评分</string>
    <string name="welcome_config_title">设定</string>
    <string name="welcome_config_msg">连接到您的 家庭自动化系统。</string>
    <string name="welcome_video_title">展示影片</string>
    <string name="welcome_video_msg">了解更多关于 至典装饰 在 Android 下的应用程序。</string>
    <string name="about">关于</string>
    <string name="configuration">设定</string>
    <string name="preferences">喜好</string>
    <string name="device_activation">设备启用</string>
    <string name="about_msg">MyHome</string>
    <string name="copyright_msg">Copyright © Control4 \nAll rights reserved.\n\nControl4 and the Control4 logo are registered trademarks of Control4 Corporation in the United States and/or other countries.</string>
    <string name="copyright_msg_land">Copyright © Control4 All rights reserved.\n\nControl4 and the Control4 logo are registered trademarks of Control4 Corporation in the United States and other countries.</string>
    <string name="feature_not_supported">目前版本不支持此功能。</string>
    <string name="dedicated_mode">专用模式：\n（关闭设备锁定）</string>
    <string name="screen_saver">屏幕保护程序：</string>
    <string name="stay_connected">保持连接状态：\n（也许会降低电池寿命）</string>
    <string name="no_active_zones">没有播放中的区域...</string>
    <string name="movie_mode">模式：\n 影像</string>
    <string name="image_mode">模式：\n 图片</string>
    <string name="zoom_in">距离 \n 近</string>
    <string name="all_motors_sensors">全部</string>
    <string name="activation_instructions">Control4 Home Control™ 需要授权才可操作。\n\n 请输入您的授权码：</string>
    <string name="activation_email_instructions">请输入您的Email信箱：</string>
    <string name="activation_button">启用</string>
    <string name="activation_link_text">还没有授权吗？</string>
    <string name="no_motors_or_sensors_in_room">这房间没有马达或传感器</string>
</resources>