<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/transparent" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:scrollbarFadeDuration="2000">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="15.0dip" android:src="@drawable/clever_controls_color" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/activation_instructions" />
            <EditText android:id="@+id/activation_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:inputType="textCapCharacters" android:imeOptions="actionNext" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/activation_email_instructions" />
            <EditText android:id="@+id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:inputType="textEmailAddress" />
            <Button android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:id="@+id/activate_button" android:background="@drawable/generic_green_button" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/activation_button" style="@style/GenericButton" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@+id/activation_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activation_link_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>