<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bkg_device_lists" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="fill_horizontal" android:id="@+id/av_red" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/av_prog_red_button" android:layout_weight="1.0" android:onClick="onRedClicked" />
        <ImageView android:layout_gravity="fill_horizontal" android:id="@+id/av_green" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/av_prog_green_button" android:layout_weight="1.0" android:onClick="onGreenClicked" />
        <ImageView android:layout_gravity="fill_horizontal" android:id="@+id/av_yellow" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/av_prog_yellow_button" android:layout_weight="1.0" android:onClick="onYellowClicked" />
        <ImageView android:layout_gravity="fill_horizontal" android:id="@+id/av_blue" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/av_prog_blue_button" android:layout_weight="1.0" android:onClick="onBlueClicked" />
    </LinearLayout>
    <LinearLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/av_menu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/av_menu" android:drawableTop="@drawable/av_menu_button" android:layout_weight="1.0" android:onClick="onMenuClicked" style="@style/AvImageButton" />
        <Button android:id="@+id/av_guide" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/av_guide" android:drawableTop="@drawable/av_guide_button" android:layout_weight="1.0" android:onClick="onGuideClicked" style="@style/AvImageButton" />
        <Button android:id="@+id/av_pvr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/av_pvr" android:drawableTop="@drawable/av_dvr_button" android:layout_weight="1.0" android:onClick="onPvrClicked" style="@style/AvImageButton" />
        <Button android:id="@+id/av_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/av_cancel" android:drawableTop="@drawable/av_cancel_button" android:layout_weight="1.0" android:onClick="onCancelClicked" style="@style/AvImageButton" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="20.0dip">
            <ImageView android:id="@+id/av_page_up" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ten_key_up_arrow_button" android:layout_weight="1.0" android:onClick="onPageUpClicked" />
            <TextView android:textSize="@dimen/av_text_size" android:textStyle="bold" android:textColor="@color/generic_text_color_default" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/av_page" android:layout_weight="1.0" />
            <ImageView android:id="@+id/imageView2" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ten_key_down_arrow_button" android:layout_weight="1.0" android:onClick="onPageDownClicked" />
        </LinearLayout>
        <RelativeLayout android:background="@drawable/bkg_av_nav" android:layout_width="175.0dip" android:layout_height="175.0dip" android:layout_marginRight="10.0dip">
            <Button android:id="@+id/av_enter" android:background="@drawable/av_nav_center_button" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/av_enter" android:layout_centerInParent="true" android:onClick="onNavEnterClicked" style="@style/AvMiscButton" />
            <ImageView android:id="@+id/av_nav_left" android:background="@drawable/av_nav_left_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="onNavLeftClicked" />
            <ImageView android:id="@+id/av_nav_right" android:background="@drawable/av_nav_right_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="onNavRightClicked" />
            <ImageView android:id="@+id/av_nav_up" android:background="@drawable/av_nav_up_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:onClick="onNavUpClicked" />
            <ImageView android:id="@+id/av_nav_down" android:background="@drawable/av_nav_down_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="onNavDownClicked" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>