<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bkg_device_lists" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:id="@+id/sensors_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="1.0dip" android:text="@string/motors_sensors" android:maxLines="2" android:layout_weight="0.4" />
        <RelativeLayout android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.6">
            <RadioGroup android:orientation="horizontal" android:id="@+id/sensors_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:layout_alignParentRight="true">
                <RadioButton android:textSize="12.0sp" android:layout_gravity="center_vertical" android:id="@+id/roomRadioButton" android:paddingLeft="45.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:checked="true" android:text="Room" android:maxLines="2" android:layout_weight="0.5" />
                <RadioButton android:textSize="12.0sp" android:layout_gravity="center_vertical" android:id="@+id/allRadioButton" android:paddingLeft="45.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/all_motors_sensors" android:maxLines="2" android:layout_weight="0.5" />
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0">
        <FrameLayout android:orientation="vertical" android:background="@drawable/list_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <GridView android:id="@+id/grid_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:numColumns="4" style="@style/GreyList" />
            <ProgressBar android:layout_gravity="center" android:id="@+id/progress" android:focusable="false" android:focusableInTouchMode="false" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:layout_gravity="top|center" android:id="@+id/no_results_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/no_motors_or_sensors_in_room" style="@style/ZoneRoomText" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>